Implemented emty category and dictionary filtering.